; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/txx9/rbtx4939/extr_irq.c_rbtx4939_ioc_irqroute.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/txx9/rbtx4939/extr_irq.c_rbtx4939_ioc_irqroute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rbtx4939_ifac2_addr = common dso_local global i32 0, align 4
@RBTX4939_IRQ_IOC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @rbtx4939_ioc_irqroute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rbtx4939_ioc_irqroute() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  %3 = load i32, i32* @rbtx4939_ifac2_addr, align 4
  %4 = call zeroext i8 @readb(i32 %3)
  store i8 %4, i8* %2, align 1
  %5 = load i8, i8* %2, align 1
  %6 = zext i8 %5 to i32
  %7 = icmp eq i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %17

12:                                               ; preds = %0
  %13 = load i32, i32* @RBTX4939_IRQ_IOC, align 4
  %14 = load i8, i8* %2, align 1
  %15 = call i32 @__fls8(i8 zeroext %14)
  %16 = add nsw i32 %13, %15
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %12, %11
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local zeroext i8 @readb(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @__fls8(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
